// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToDo renders base form when props.editForm is false 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="task"
    >
      Task
    </label>
    <input
      class="form-control"
      id="task"
      name="task"
      placeholder="Clean the toilets"
      type="text"
      value="foo"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="assignee_id"
    >
      Assignee
    </label>
    <select
      class="form-control"
      id="assignee_id"
      name="assignee_id"
    >
      <option
        value=""
      >
        Clear Assignee
      </option>
      <option
        value="id1"
      >
        foo@example.com
      </option>
    </select>
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="due_by"
    >
      Due By
    </label>
    <input
      class="form-control"
      id="due_by"
      name="due_by"
      placeholder="mm/dd/yyyy"
      type="date"
      value="05/20/2020"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="foo"
    />
    <datalist
      data-test-id="categories"
      id="categories"
    >
      <option
        value="foo"
      />
      <option
        value="bar"
      />
    </datalist>
  </div>
</div>
`;

exports[`ToDo renders edit form when props.editForm is true 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="task"
    >
      Task
    </label>
    <input
      class="form-control"
      id="task"
      name="task"
      placeholder="Clean the toilets"
      type="text"
      value="foo"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="assignee_id"
    >
      Assignee
    </label>
    <select
      class="form-control"
      id="assignee_id"
      name="assignee_id"
    >
      <option
        value=""
      >
        Clear Assignee
      </option>
      <option
        value="id1"
      >
        foo@example.com
      </option>
    </select>
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="due_by"
    >
      Due By
    </label>
    <input
      class="form-control"
      id="due_by"
      name="due_by"
      placeholder="mm/dd/yyyy"
      type="date"
      value="05/20/2020"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="foo"
    />
    <datalist
      data-test-id="categories"
      id="categories"
    >
      <option
        value="foo"
      />
      <option
        value="bar"
      />
    </datalist>
  </div>
  <div
    class="mb-3 mb-3"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="completed"
        name="completed"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="completed"
        title=""
      >
        Completed
      </label>
    </div>
  </div>
</div>
`;

exports[`ToDo renders with defaults 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="task"
    >
      Task
    </label>
    <input
      class="form-control"
      id="task"
      name="task"
      placeholder="Clean the toilets"
      type="text"
      value="foo"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="assignee_id"
    >
      Assignee
    </label>
    <select
      class="form-control"
      id="assignee_id"
      name="assignee_id"
    >
      <option
        value=""
      >
        Clear Assignee
      </option>
      <option
        value="id1"
      >
        foo@example.com
      </option>
    </select>
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="due_by"
    >
      Due By
    </label>
    <input
      class="form-control"
      id="due_by"
      name="due_by"
      placeholder="mm/dd/yyyy"
      type="date"
      value="05/20/2020"
    />
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value=""
    />
    <datalist
      data-test-id="categories"
      id="categories"
    />
  </div>
</div>
`;
